delete actions and booking fixed